--- a/dev/htmlTemplate/main.html
+++ b/dev/htmlTemplate/main.html
@@ -15,8 +15,7 @@
   id="carouselExampleIndicators"
   class="carousel slide"
   data-ride="carousel"
-  style="margin: 30px auto; width: 320px;"
->
+  style="margin: 30px auto; width: 320px;">
   <ol class="carousel-indicators">
     <li
       data-target="#carouselExampleIndicators"
