--- a/dev/htmlTemplate/nav.html
+++ b/dev/htmlTemplate/nav.html
@@ -2,7 +2,7 @@
   <div class="navBg">   
     <nav class="nav">
       <div class="navLeft">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="index.html">
           <img src="./images/logo.png" alt="">
           <div class="daijoubu">
             <div class="daijoubuMd">自助大丈夫</div>
@@ -23,10 +23,10 @@
     </nav>
     <div class="navSmall">
       <div class="navSmallLeft">
-                <button class="hamburger hamburger--collapse " type="button">
-                    <span class="hamburger-box">
-                    <span class="hamburger-inner"></span>
-                    </span>
+        <button class="hamburger hamburger--collapse " type="button">
+            <span class="hamburger-box">
+              <span class="hamburger-inner"></span>
+            </span>
         </button>
         <div id="panel">		
           <a href="plan.html">排行程</a> 
