--- a/dev/index.html
+++ b/dev/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 @@include('./htmlTemplate/head.html')
+<!-- homepage 文字動畫 -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 <!-- skrollr cdn -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
