--- a/dev/test.html
+++ b/dev/test.html
@@ -6,28 +6,28 @@
 
 
   <body>
-    <h1 class="title bg-warning">Hello World</h1>
+    @@include('./htmlTemplate/cardBlog.html')
+    <!-- <h1 class="title bg-warning">Hello World</h1>
     <img src="./images/1.png" alt="" />
     <img src="./images/test/2.png" alt="" />
     <img src="./images/big.jpg" alt="" />
     <hr />
     <div class="testImage">testImage</div>
-    <div class="testImage2">testImage</div>
-
+    <div class="testImage2">testImage</div> -->
 
     <!-- header -->
-    @@include('./htmlTemplate/header.html')
+    <!-- @@include('./htmlTemplate/header.html') -->
     <!-- main -->
-    @@include('./htmlTemplate/main.html')
+    <!-- @@include('./htmlTemplate/main.html') -->
     <!-- footer -->
-    @@include('./htmlTemplate/footer.html')
+    <!-- @@include('./htmlTemplate/footer.html')
     <p>hello234567890</p>
     <img src="./images/big.jpg" alt="" />
     <img src="./images/big.jpg" alt="" />
 
     @@include('./htmlTemplate/footer.html')
     @@include('./htmlTemplate/cardBlog.html')
-    @@include('./htmlTemplate/partinGroups.html')
+    @@include('./htmlTemplate/partinGroups.html') -->
 
 
     <img src="./images/big.jpg" alt="" />
