--- a/dev/test.html
+++ b/dev/test.html
@@ -7,7 +7,7 @@
 
   <body>
     @@include('./htmlTemplate/cardBlog.html')
-    <!-- <h1 class="title bg-warning">Hello World</h1>
+    <h1 class="title bg-warning">Hello World</h1>
     <img src="./images/1.png" alt="" />
     <img src="./images/test/2.png" alt="" />
     <img src="./images/big.jpg" alt="" />
@@ -27,7 +27,7 @@
 
     @@include('./htmlTemplate/footer.html')
     @@include('./htmlTemplate/cardBlog.html')
-    @@include('./htmlTemplate/partinGroups.html') -->
+    @@include('./htmlTemplate/partinGroups.html')
 
 
     <img src="./images/big.jpg" alt="" />
