--- a/dev/htmlTemplate/cardSpot.html
+++ b/dev/htmlTemplate/cardSpot.html
@@ -16,7 +16,7 @@
                 <a href="">
                     <p>+加入行程</p>
                 </a>
-                <a href="">
+                <a href="" onclick="keepSpotLike(this);">
                     <img src="./images/heart.png" alt="">
                 </a>
             </div>
