--- a/dev/htmlTemplate/mainMember.html
+++ b/dev/htmlTemplate/mainMember.html
@@ -75,18 +75,14 @@
                                     </div>
                                     <div>
                                         <div class="cardStar">
-                                            <!-- <img src="./img/star_fill.png" alt="">
-                  <img src="./img/star_fill.png" alt="">
-                  <img src="./img/star_fill.png" alt="">
-                  <img src="./img/star_fill.png" alt="">
-                  <img src="./img/star_notfill.png" alt=""> -->
+                         
                                             <p>人氣319</p>
                                         </div>
                                         <div class="cardLike">
                                             <a href="">
                                                 <p>+加入行程</p>
                                             </a>
-                                            <a href="">
+                                            <a href="" onclick="keepSpotLike(this);">
                                                 <img src="./images/heart.png" alt="">
                                             </a>
                                         </div>
