connect all lightbox

--- a/dev/htmlTemplate/blogShow.html
+++ b/dev/htmlTemplate/blogShow.html
@@ -2,7 +2,7 @@
     <div class="coverPhoto">
     </div>
 
-    <a><img src="./images/writeBlog.png"></a>
+    <a href="./writeBlog.html"><img src="./images/writeBlog.png"></a>
 
     <div class="writerBlog">
         <div class="boxWriter">
