--- a/dev/htmlTemplate/mainBlogView.html
+++ b/dev/htmlTemplate/mainBlogView.html
@@ -1,6 +1,6 @@
 <div class="container px-lg-0">
     <div class="writeNewBlog col-4 col-l-2 col-md-2 col-lg-2">
-        <a href="">
+        <a href="./writeBlog.html">
             <img src="./images/writeBlog.png" alt="" class="d-md-block" />
         </a>
     </div>
@@ -23,9 +23,9 @@
     <div class="blogCardsBlockView">
         <div class="mainBlogCardsArea">
             <!-- 卡片區塊start -->
-            <div class="card cardOriginalTem cardBlog cardBlogOnBlogView d-none
+            <div  class="card cardOriginalTem cardBlog cardBlogOnBlogView d-none
                 d-md-block" style="width: 18rem;">
-                <a href="">
+                <a href="./blogInside.html">
                     <img src="./images/1.png" class="card-img-top" alt="...">
                     <div class="card-body card-img-overlay
                         cardImgOverlayWebUse">
