--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="openNewGroup col-4 col-l-2 col-md-2 col-lg-2">
-        <a href="">
+        <a href="" onclick="openNewGroup();">
             <img src="./images/openNewGroup.png" alt="" class="d-md-block" />
         </a>
     </div>
@@ -164,8 +164,8 @@
             <!-- pc version start  -->
             <div class="groupViewPCcardBlock d-md-flex d-none">
                 <!-- 揪團卡片 -->
-                <div class="card cardOriginalTem cardGroup " style="">
-                    <a href="">
+                <div class="card cardOriginalTem cardGroup "  onclick="openpartinGroup();">
+                    <a href="" >
                         <img src="./images/lake.jpg" class="card-img-top" alt="...">
                         <div class="card-body card-img-overlay cardImgOverlayWebUse">
                             <h5 class="card-title cardTitleWebUse">揪團</h5>
@@ -456,3 +456,6 @@
         </div>
     </div>
 </div>
+
+
+
