--- a/dev/htmlTemplate/partinGroups.html
+++ b/dev/htmlTemplate/partinGroups.html
@@ -1,16 +1,16 @@
-    <form action="#" method="get" class="partingroupsfrom">
-        <div class="partingroups">
+<form action="#" method="get" class="partingroupsfrom">
+    <div class="partingroups">
         <div class="mypartingroups">
             <div class="mypartingroupst">參加揪團</div>
         </div>    
         <div class="mygcont">
             <div class="mypartinq">
-            已報名成功</br>
-            可以前往會員中心查看報名結果
-        </div>
-        <div class="oneconf">
-            <button type="done" value="Done" class="mypartinc">確認</button>
+                已報名成功</br>
+                可以前往會員中心查看報名結果
+            </div>
+            <div class="oneconf">
+                <button onclick="closepartinGroup();" type="done" value="Done" class="mypartinc">確認</button>
+            </div>
         </div>
     </div>
-</div>
-    </form>
+</form>
