--- a/dev/htmlTemplate/tourStatus.html
+++ b/dev/htmlTemplate/tourStatus.html
@@ -1,17 +1,17 @@
-    <form action="#" method="get" class="toursatatusform">
-        <div class="statusconf">
+<form action="#" method="get" class="toursatatusform">
+    <div class="statusconf">
         <div class="mytourst">
             <div class="tourst">我的行程</div>
         </div>    
         <div class="tourstcont">
             <div class="statusq">
-            儲存成功！</br>
-            請選擇此行程目前的狀態
-        </div>
-        <div class="twost">
-            <button type="done" value="Done" class="finish">已完成</button>
-            <button type="notyet" value="notyet" class="notfinish">待完成</button> 
+                儲存成功！</br>
+                請選擇此行程目前的狀態
+            </div>
+            <div class="twost">
+                <button onclick="closeNewGroup();" type="done" value="Done" class="finish">已完成</button>
+                <button onclick="closeNewGroup();" type="notyet" value="notyet" class="notfinish">待完成</button> 
+            </div>
         </div>
     </div>
-</div>
-    </form>
+</form>
