--- a/dev/groupView.html
+++ b/dev/groupView.html
@@ -10,6 +10,30 @@
     @@include('./htmlTemplate/slider.html')
     @@include('./htmlTemplate/mainGroupView.html')
     @@include('./htmlTemplate/footer.html')
+    <div id="setupGroup" class="lightBoxWall" >
+    @@include('./htmlTemplate/setupGroup.html')
+    </div>
+    <div id="partinGroup" class="lightBoxWall" >
+        @@include('./htmlTemplate/partinGroups.html')
+    </div> 
 </body>
+<script>
+    let setupGroup = document.getElementById("setupGroup");
+    function openNewGroup(){
+        setupGroup.style.display = "block";
+    };
+    function closeNewGroup(){
+        setupGroup.style.display = "none";
+    };
+    let partinGroup = document.getElementById("partinGroup");
+    function openpartinGroup(){
+        partinGroup.style.display = "block";
+    };
+    function closepartinGroup(){
+        partinGroup.style.display = "none";
+    };
+
+
+</script>
 
 </html>
