--- a/dev/plan.html
+++ b/dev/plan.html
@@ -5,6 +5,19 @@
     @@include('./htmlTemplate/nav.html')
     @@include('./htmlTemplate/mainPlan.html')
     @@include('./htmlTemplate/footer.html')
-</body>
+    <div id="tourStatus" class="lightBoxWall" >
+        @@include('./htmlTemplate/tourStatus.html')
+    </div> 
 
+</body>
+<script>
+    let tourStatus = document.getElementById("tourStatus");
+    function saveMyPlan(){
+        tourStatus.style.display = "block";
+    };
+    function closeNewGroup(){
+        tourStatus.style.display = "none";
+    };
+
+</script>
 </html>
