--- a/dev/htmlTemplate/mainGroupView.html
+++ b/dev/htmlTemplate/mainGroupView.html
@@ -1,14 +1,14 @@
 <div class="container">
     <div class="openNewGroup col-4 col-l-2 col-md-2 col-lg-2">
-        <a href="" onclick="openNewGroup();">
-            <img src="./images/openNewGroup.png" alt="" class="d-md-block" />
+        <a  onclick="openNewGroup();">
+            <img src="./images/openNewGroup.png"  class="d-md-block" />
         </a>
     </div>
     <!-- search bar -->
     <div class="groupViewSearchBar row">
         <input type="text" placeholder="來看看有哪些揪團" class="col col-md-5" />
         <button>
-            <img src="./images/iconSearch.png" alt="" />
+            <img src="./images/iconSearch.png"  />
         </button>
     </div>
     <hr />
@@ -164,8 +164,8 @@
             <!-- pc version start  -->
             <div class="groupViewPCcardBlock d-md-flex d-none">
                 <!-- 揪團卡片 -->
-                <div class="card cardOriginalTem cardGroup "  onclick="openpartinGroup();">
-                    <a href="" >
+                <div class="card cardOriginalTem cardGroup"  >
+                    <a  onclick="openpartinGroup();">
                         <img src="./images/lake.jpg" class="card-img-top" alt="...">
                         <div class="card-body card-img-overlay cardImgOverlayWebUse">
                             <h5 class="card-title cardTitleWebUse">揪團</h5>
@@ -173,7 +173,6 @@
                                 <p class="card-text cardTextWebUse">日月潭<br><span
                                         style="font-weight: 300;">九族文化村和健行步道</span></p>
                             </div>
-                            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
                         </div>
                         <div>
                             <div class="cardGroupContent">
@@ -187,7 +186,7 @@
                                 <p>出團日期：2020/06/30</p>
                                 <div>
                                     <p>報名截止：2020/06/30</p>
-                                    <a href="">
+                                    <a >
                                         <img src="./images/heart.png" alt="">
                                     </a>
                                 </div>
@@ -197,7 +196,7 @@
                 </div>
                 <!-- 揪團卡片 -->
                 <div class="card cardOriginalTem cardGroup " style="">
-                    <a href="">
+                    <a >
                         <img src="./images/lake.jpg" class="card-img-top" alt="...">
                         <div class="card-body card-img-overlay cardImgOverlayWebUse">
                             <h5 class="card-title cardTitleWebUse">揪團</h5>
@@ -219,7 +218,7 @@
                                 <p>出團日期：2020/06/30</p>
                                 <div>
                                     <p>報名截止：2020/06/30</p>
-                                    <a href="">
+                                    <a >
                                         <img src="./images/heart.png" alt="">
                                     </a>
                                 </div>
@@ -239,7 +238,7 @@
                     <div class="carousel-inner innerCardScheGroupPhoneSlide">
                         <div class="carousel-item active ">
                             <div class="card cardOriginalTem cardGroup d-block" style="width: 18rem;">
-                                <a href="">
+                                <a >
                                     <img src="./images/lake.jpg" class="card-img-top" alt="...">
                                     <div class="card-body card-img-overlay cardImgOverlayWebUse">
                                         <h5 class="card-title cardTitleWebUse">揪團</h5>
@@ -263,7 +262,7 @@
 
                                             <div>
                                                 <p>報名截止：2020/06/30</p>
-                                                <a href="">
+                                                <a >
                                                     <img src="./images/heart.png" alt="">
                                                 </a>
                                             </div>
@@ -274,7 +273,7 @@
                         </div>
                         <div class="carousel-item">
                             <div class="card cardOriginalTem cardGroup d-block " style="width: 18rem;">
-                                <a href="">
+                                <a >
                                     <img src="./images/lake.jpg" class="card-img-top" alt="...">
                                     <div class="card-body card-img-overlay cardImgOverlayWebUse">
                                         <h5 class="card-title cardTitleWebUse">揪團</h5>
@@ -453,6 +452,7 @@
             </div>
             <!-- phone version end -->
             <!-- Group Main End -->
+
         </div>
     </div>
 </div>
