--- a/dev/htmlTemplate/partinGroups.html
+++ b/dev/htmlTemplate/partinGroups.html
@@ -9,7 +9,7 @@
                 可以前往會員中心查看報名結果
             </div>
             <div class="oneconf">
-                <button onclick="closepartinGroup();" type="done" value="Done" class="mypartinc">確認</button>
+                <button onclick="closepartinGroup();"  value="Done" class="mypartinc">確認</button>
             </div>
         </div>
     </div>
