--- a/dev/htmlTemplate/setupGroup.html
+++ b/dev/htmlTemplate/setupGroup.html
@@ -50,9 +50,9 @@
                 <div class="noticetext" style="clear:both">備註：</div>
                 <div class="noticetexta"><textarea class="noticetxthere"></textarea></div> 
                 <div class="threestatus">
-                    <button type="submit" value="submit" class="setgroupadd">發佈</button>
-                    <button type="submit" value="submit"class="setgroupsave">儲存</button>
-                    <button onclick="closeNewGroup();" type="submit" value="reset" class="setgroupcancel">取消</button>
+                    <button  value="submit" class="setgroupadd">發佈</button>
+                    <button  value="submit"class="setgroupsave">儲存</button>
+                    <button onclick="closeNewGroup();"  value="reset" class="setgroupcancel">取消</button>
                 </div>
             </div>
         </div>
