--- a/dev/htmlTemplate/setupTourn.html
+++ b/dev/htmlTemplate/setupTourn.html
@@ -1,4 +1,4 @@
-    <form action="#" method="get" class="setnameform">
+    <div  class="setnameform">
         <div class="setall">
         <div class="setupname">
             <div class="setuptitle">請建立行程名稱</div>
@@ -12,6 +12,4 @@
             </div>
             </div>
         </div>
-     </form>
-
-     
+    </div>
