--- a/dev/htmlTemplate/tourStatus.html
+++ b/dev/htmlTemplate/tourStatus.html
@@ -1,4 +1,4 @@
-<form action="#" method="get" class="toursatatusform">
+<form  class="toursatatusform">
     <div class="statusconf">
         <div class="mytourst">
             <div class="tourst">我的行程</div>
