--- a/dev/htmlTemplate/search.html
+++ b/dev/htmlTemplate/search.html
@@ -1,6 +1,7 @@
 <div class="groupViewSearchBar row">
     <input type="text" placeholder="來看看有哪些揪團" class="col col-md-5">
     <button>
-        <img src="./images/iconSearch.png" alt="">
+        <img src="./images/iconSearch.png" >
+        
     </button>
 </div>
