--- a/dev/htmlTemplate/cardMemberSchedule.html
+++ b/dev/htmlTemplate/cardMemberSchedule.html
@@ -1,22 +1,19 @@
 <!-- 會員中心＿行程 -->
 <div class="card  cardOriginalTem cardSchedule cardMemberSchedule" style="width: 18rem;">
-    <a href="">
-        <img src="./images/lake.jpg" class="card-img-top" alt="...">
+    <a >
+        <img src="./images/lake.jpg" class="card-img-top">
         <div class="card-body card-img-overlay cardImgOverlayWebUse">
             <h5 class="card-title cardTitleWebUse">行程</h5>
             <div class="mask">
-                <p class="card-text cardTextWebUse">日月潭<br><span style="font-weight: 300;">九族文化村和健行步道</span></p>
+                <p class="card-text cardTextWebUse">日月潭<br>
+                    <span style="font-weight: 300;">九族文化村和健行步道</span></p>
             </div>
-            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
         </div>
         <div>
             <div class="cardScheduleContent">
-                <!-- <p>南投縣</p> -->
                 <div>
-                    <a href="">
-                        <p>319人氣</p>
-                    </a>
-                    <a href="">
+                    <a><p>319人氣</p></a>
+                    <a>
                         <img src="./images/heart.png" alt="">
                     </a>
                 </div>
