--- a/dev/test.html
+++ b/dev/test.html
@@ -14,13 +14,12 @@
     <hr />
     <div class="testImage">testImage</div>
     <div class="testImage2">testImage</div> -->
-
     <!-- header -->
     <!-- @@include('./htmlTemplate/header.html') -->
     <!-- main -->
-    <!-- @@include('./htmlTemplate/main.html') -->
-    <!-- footer -->
-    <!-- @@include('./htmlTemplate/footer.html')
+    @@include('./htmlTemplate/main.html')
+    footer
+    @@include('./htmlTemplate/footer.html')
     <p>hello234567890</p>
     <img src="./images/big.jpg" alt="" />
     <img src="./images/big.jpg" alt="" />
