--- a/dev/htmlTemplate/cardBlog.html
+++ b/dev/htmlTemplate/cardBlog.html
@@ -1,13 +1,13 @@
 <!-- 遊記 -->
 <div class="card cardOriginalTem cardBlog" style="width: 18rem;">
-    <a href="">
-        <img src="./images/1.png" class="card-img-top" alt="...">
+    <a>
+        <img src="./images/1.png" class="card-img-top">
         <div class="card-body card-img-overlay cardImgOverlayWebUse">
             <h5 class="card-title cardTitleWebUse">遊記</h5>
             <div class="mask">
-                <p class="card-text cardTextWebUse">日月潭<br><span style="font-weight: 300;">九族文化村和健行步道</span></p>
+                <p class="card-text cardTextWebUse">日月潭<br>
+                    <span style="font-weight: 300;">九族文化村和健行步道</span></p>
             </div>
-            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
         </div>
         <div>
             <div class="cardBlogContent">
@@ -15,8 +15,8 @@
                 <p>發佈日期：2020/08/20</p>
                 <div>
                     <p>人氣319</p>
-                    <a href="" >
-                        <img src="./images/heart.png" alt="">
+                    <a>
+                        <img src="./images/heart.png">
                     </a>
                 </div>
             </div>
