--- a/dev/htmlTemplate/cardSchedule.html
+++ b/dev/htmlTemplate/cardSchedule.html
@@ -1,23 +1,22 @@
 <!-- 行程 -->
 <div class="card cardSchedule cardOriginalTem " style="width: 18rem;">
-    <a href="">
-        <img src="./images/lake.jpg" class="card-img-top" alt="...">
+    <a>
+        <img src="./images/lake.jpg" class="card-img-top">
         <div class="card-body card-img-overlay cardImgOverlayWebUse">
             <h5 class="card-title cardTitleWebUse">行程</h5>
             <div class="mask">
-                <p class="card-text cardTextWebUse">日月潭<br><span style="font-weight: 300;">九族文化村和健行步道</span></p>
+                <p class="card-text cardTextWebUse">日月潭<br>
+                    <span style="font-weight: 300;">九族文化村和健行步道</span>
+                </p>
             </div>
-            <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
         </div>
         <div>
             <div class="cardScheduleContent">
                 <p>319人氣</p>
                 <div>
-                    <a href="">
-                        <p>+加入行程</p>
-                    </a>
-                    <a href="">
-                        <img src="./images/heart.png" alt="">
+                    <a><p>+加入行程</p></a>
+                    <a>
+                        <img src="./images/heart.png">
                     </a>
                 </div>
             </div>
