--- a/dev/member.html
+++ b/dev/member.html
@@ -6,5 +6,9 @@
     @@include('./htmlTemplate/nav.html')
     @@include('./htmlTemplate/mainMember.html')
     @@include('./htmlTemplate/footer.html')
+
   </body>
+  <script src="./js/member.js"></script>
+
+
 </html>
