--- a/dev/test.html
+++ b/dev/test.html
@@ -6,30 +6,26 @@
 
 
   <body>
-    @@include('./htmlTemplate/cardBlog.html')
-    <h1 class="title bg-warning">Hello World</h1>
-    <img src="./images/1.png" alt="" />
-    <img src="./images/test/2.png" alt="" />
-    <img src="./images/big.jpg" alt="" />
-    <hr />
-    <div class="testImage">testImage</div>
-    <div class="testImage2">testImage</div> -->
+    @@include('./htmlTemplate/SpotLightBox.html')
+    <!-- <hr /> -->
+    <!-- <div class="testImage">testImage</div> -->
+
     <!-- header -->
     <!-- @@include('./htmlTemplate/header.html') -->
     <!-- main -->
-    @@include('./htmlTemplate/main.html')
-    footer
-    @@include('./htmlTemplate/footer.html')
-    <p>hello234567890</p>
-    <img src="./images/big.jpg" alt="" />
-    <img src="./images/big.jpg" alt="" />
+    <!-- @@include('./htmlTemplate/main.html') -->
+    <!-- footer -->
+    <!-- @@include('./htmlTemplate/footer.html') -->
+    <!-- <p>hello234567890</p> -->
+    <!-- <img src="./images/big.jpg" alt="" /> -->
+    <!-- <img src="./images/big.jpg" alt="" /> -->
 
-    @@include('./htmlTemplate/footer.html')
-    @@include('./htmlTemplate/cardBlog.html')
-    @@include('./htmlTemplate/partinGroups.html')
+    <!-- @@include('./htmlTemplate/footer.html') -->
+    <!-- @@include('./htmlTemplate/cardBlog.html') -->
+    <!-- @@include('./htmlTemplate/partinGroups.html') -->
 
 
     <img src="./images/big.jpg" alt="" />
-    @@include('./htmlTemplate/cardSpot.html')
+    <!-- @@include('./htmlTemplate/cardSpot.html') -->
   </body>
 </html>
