--- a/dev/htmlTemplate/mainPlan.html
+++ b/dev/htmlTemplate/mainPlan.html
@@ -180,30 +180,30 @@
           <hr>
           <div class="row planDragAttraZone">
             <!-- 景點卡片 -->
-<div class="card cardSpot cardOriginalTem " style="width: 18rem;">
-  <a href="">
-      <img src="./images/lake.jpg" class="card-img-top" alt="...">
-      <div class="card-body card-img-overlay cardImgOverlayWebUse">
-          <h5 class="card-title cardTitleWebUse">景點</h5>
-          <div class="mask">
-              <p class="card-text cardTextWebUse">日月潭<br><span style="font-weight: 300;">九族文化村和健行步道</span></p>
-          </div>
-      </div>
-      <div>
-          <div class="cardStar">
-              <p>人氣319</p>
-          </div>
-          <div class="cardLike">
-              <a href="">
-                  <p>+加入行程</p>
+            <div class="card cardSchedule cardOriginalTem " style="width: 18rem;">
+              <a>
+                  <img src="./images/lake.jpg" class="card-img-top">
+                  <div class="card-body card-img-overlay cardImgOverlayWebUse">
+                      <h5 class="card-title cardTitleWebUse">行程</h5>
+                      <div class="mask">
+                          <p class="card-text cardTextWebUse">日月潭<br>
+                              <span style="font-weight: 300;">九族文化村和健行步道</span>
+                          </p>
+                      </div>
+                  </div>
+                  <div>
+                      <div class="cardScheduleContent">
+                          <p>319人氣</p>
+                          <div>
+                              <a><p>+加入行程</p></a>
+                              <a>
+                                  <img src="./images/heart.png">
+                              </a>
+                          </div>
+                      </div>
+                  </div>
               </a>
-              <a href="">
-                  <img src="./images/heart.png" alt="">
-              </a>
           </div>
-      </div>
-  </a>
-</div>
 <!-- 景點卡片end -->
           </div>
           
