--- a/dev/member.html
+++ b/dev/member.html
@@ -6,9 +6,22 @@
     @@include('./htmlTemplate/nav.html')
     @@include('./htmlTemplate/mainMember.html')
     @@include('./htmlTemplate/footer.html')
-
+    <div id="spotLightBox" class="lightBoxWall" style="display:block;">
+      @@include('./htmlTemplate/SpotLightBox.html')
+    </div>
   </body>
   <script src="./js/member.js"></script>
+  <script>
+    
+    let spotLightBox = document.getElementById("spotLightBox");
+    function openSpotLightBox(){
+      spotLightBox.style.display = "block";
+    };
+    function closespotLightBox(){
+      console.log(spotLightBox);
+      spotLightBox.style.display = "none";
 
+    }
+  </script>
 
 </html>
