--- a/dev/member.html
+++ b/dev/member.html
@@ -6,7 +6,7 @@
     @@include('./htmlTemplate/nav.html')
     @@include('./htmlTemplate/mainMember.html')
     @@include('./htmlTemplate/footer.html')
-    <div id="spotLightBox" class="lightBoxWall" style="display:block;">
+    <div id="spotLightBox" class="lightBoxWall">
       @@include('./htmlTemplate/SpotLightBox.html')
     </div>
   </body>
